<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
         <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#000000"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:text="@string/txt_pageinfoscreen" />
            
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginTop="20dp">

           
            <TextView
            android:id="@+id/tvetLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/latitude"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textStyle="bold"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/etLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textColor="#AEEA00" />
        </LinearLayout>
        
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvetLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/longtitude"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/etLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textColor="#AEEA00" />
        </LinearLayout>
         <TextView
            android:id="@+id/tvetDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="00dp"
            android:inputType="textMultiLine"
            android:textColor="#AEEA00" />
        
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
             <Button
            android:id="@+id/btnTakePhoto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_custom"
            android:onClick="dispatchTakePictureIntent"
            android:padding="14dp"
            android:text="@string/Captureaphoto"
            android:textColor="#FFFFFF"
            android:typeface="monospace" />
             
         </LinearLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="101dp"
             android:layout_marginTop="10dp" >
              <ImageView
             android:id="@+id/ivTakePhoto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/camera" />
         </LinearLayout>

        <Button
            android:id="@+id/btnInsert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_custom"
            android:onClick="insertData"
            android:padding="14dp"
            android:text="@string/Insert"
            android:textColor="#FFFFFF"
            android:typeface="monospace" />

    </LinearLayout>

</ScrollView>